<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical" >

    <TableLayout
        android:id="@+id/TableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onAddEnglishWordsButtonClick"
            android:text="@string/add_english_words" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onAddHinglishWordsButtonClick"
            android:text="@string/add_hinglish_words" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onAddEnglishSlangWordsButtonClick"
            android:text="@string/add_eng_slang_words" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onAddEnglishShorthandWords"
            android:text="@string/add_eng_shorthand_words" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onAddMarathiWordsButtonClick"
            android:text="@string/add_marathi_words" />

        <Button
            android:id="@+id/Button01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onAddTamilWordsButtonClick"
            android:text="@string/add_tamil_words" />

        <Button
            android:id="@+id/Button02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onAddBengaliWordsButtonClick"
            android:text="@string/add_bengali_words" />

        <Button
            android:id="@+id/Button03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onAddOriyaWordsButtonClick"
            android:text="@string/add_oriya_words" />

        <Button
            android:id="@+id/Button04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onAddTeluguWordsButtonClick"
            android:text="@string/add_telugu_words" />

        <Button
            android:id="@+id/Button05"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onAddGujaratiWordsButtonClick"
            android:text="@string/add_gujarati_words" />

        <Button
            android:id="@+id/Button06"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onAddUrduWordsButtonClick"
            android:text="@string/add_urdu_words" />

        <Button
            android:id="@+id/Button08"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical"
            android:onClick="onAddFrenchWordsButtonClick"
            android:text="@string/add_french_words" />

        <Button
            android:id="@+id/Button09"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onAddArabicWordsButtonClick"
            android:text="@string/add_arabic_words" />

        <Button
            android:id="@+id/Button10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onAddSpanishWordsButtonClick"
            android:text="@string/add_spanish_words" />

        <Button
            android:id="@+id/Button11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onAddGermanWordsButtonClick"
            android:text="@string/add_german_words" />
    </TableLayout>

</ScrollView>