<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainUIScroller"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical" >

    <TableLayout
        android:id="@+id/TableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|fill|fill_horizontal|fill_vertical"
        android:orientation="vertical"
        tools:context=".MainUiActivity" >

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onAddNewWordsButtonClick"
            android:text="@string/add_new_words" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onBrowseEditDictionaryButtonClick"
            android:text="@string/browse_edit_dict" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRestoreWordsFromTextFileButtonClick"
            android:text="@string/restore_words" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onBackupWordsToTextFileButtonClick"
            android:text="@string/backup_words" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onAddWordListButtonClick"
            android:text="@string/add_words_list" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onImportWordsFromWhatsappButtonClick"
            android:text="@string/import_whatsapp_words" />

        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onFaqButtonClick"
            android:text="@string/faq" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRateAppButtonClick"
            android:text="@string/rate_app" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCreditsButtonClick"
            android:text="@string/credits" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onAboutButtonClick"
            android:text="@string/about" />
    </TableLayout>

</ScrollView>